[package]
name = "unidosx-engine"
version = "0.0.1-alpha.1"
edition = "2024"
description = ""
readme = "README.md"
authors = ["KitsuVM <nashiradeer@gmail.com>"]
repository = "https://github.com/kitsuvm/unidosx-engine"
license = "MIT"
keywords = ["terminal", "game", "engine"]
categories = ["command-line-interface", "game-engines"]
